# ai-lawyer-rag-chatbot

./: .gitignore  frontend.py  main.py  pyproject.toml  rag_pipline.py  requirements.txt  vector_database.py
